# VisionSort

./: .gitignore  README.md  app.py  pyproject.toml  test_import.py
.architecture/documents/: visionsort_architecture.md  visionsort_prd.md
.github/workflows/: ci.yml
config/: default.yaml
data/: visionsort.db
data/demo/: .gitkeep  C1.jsonl  C2.jsonl  C3.jsonl
scripts/: init_project.py
tests/: conftest.py  test_acquisition_buffer.py  test_annotations.py  test_database.py  test_dataset_integrity.py  test_dataset_pipeline.py  test_demo_assets.py  test_e2e.py  test_gpu_queue.py  test_handoff_buffer.py  test_handoff_integrity.py  test_inference_lifecycle.py  test_job_orchestration.py  test_media_archive.py  test_model_activation_runtime.py  test_model_registry.py  test_multi_model_runtime.py  test_multimodel_supervisor_e2e.py  test_pipeline_guardrails.py  test_pipeline_worker.py  test_pose_review.py  test_supervisor_commands.py  test_supervisor_e2e.py  test_supervisor_stop_session.py  test_tracking_events.py  test_training_pipeline.py  test_training_registry_cycle.py
visionsort/acquisition/: worker.py
visionsort/annotations/: __init__.py  auto.py  quality.py  review.py  validators.py
visionsort/core/: config.py  enums.py  paths.py  types.py
visionsort/database/: db.py  repositories.py
visionsort/datasets/: integrity.py  pipeline.py
visionsort/deployment/: registry.py
visionsort/events/: engine.py
visionsort/inference/: engine.py
visionsort/media/: __init__.py  archive.py
visionsort/observations/: export.py
visionsort/runtime/: demo_assets.py  (+5 more)
(+16 files in other folders)
